--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BSContext": "Server=DORUKOZUDOGRU;Initial Catalog=template-database;User Id=sa;Password=1234qqqQ;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
